--- a/public/kanbas/home/index.html
+++ b/public/kanbas/home/index.html
@@ -76,6 +76,7 @@
                 Help
               </a>
             </li>
+            <li class="list-group-item" style="height: 1250px"></li>
           </ul>
         </div>
       </div>
@@ -166,7 +167,7 @@
               <div class="wd-account-navigation">
                 <ul class="list-group">
                   <li class="list-group-item active">
-                    <a href="index.html">Home</a>
+                    <a href="../home/index.html">Home</a>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Piazza</a>
@@ -197,21 +198,51 @@
                   </li>
                   <li class="list-group-item">
                     <a href="#">Discussions</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Announcements</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Pages</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Files</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Rubrics</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                   <li class="list-group-item">
                     <a href="#">Outcomes</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <a href="#">Collaborations</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <a href="#">Syllabus</a>
+                    <div class="float-end">
+                      <i class="far fa-eye-slash"></i>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -469,6 +500,299 @@
                           <div class="col-10">
                             <text class="wd-red-color"
                               >Creating a React Application
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col">
+                  <div class="wd-assignments-list m-1">
+                    <ul class="list-group">
+                      <li class="list-group-item active">
+                        <div class="row">
+                          <div class="col-9 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-caret-down"></i>
+                            <h6>Week 1 - HTML</h6>
+                          </div>
+                          <div class="col-3">
+                            <div class="float-end">
+                              <button
+                                class="btn btn-light dropdown-toggle"
+                                type="button"
+                                id="dropdownMenuButton"
+                                data-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false"
+                              >
+                                <i
+                                  class="fas fa-check-circle wd-green my-0"
+                                ></i>
+                              </button>
+                              <i class="fas fa-plus"></i>
+                              <i class="fas fa-ellipsis-v"></i>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <h6>LEARNING OBJECTIVES</h6>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                          </div>
+                          <div class="col-10">
+                            <h7
+                              >Learn how to create user interfaces with HTML</h7
+                            >
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                          </div>
+                          <div class="col-10">
+                            <h7>Keep working on assignment 1</h7>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                          </div>
+                          <div class="col-10">
+                            <h7>Deploy the assignment to Netlify</h7>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <h6>READING</h6>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                          </div>
+                          <div class="col-10">
+                            <h7
+                              >Full Stack Developer - Chapter 1 -
+                              Introduction</h7
+                            >
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                          </div>
+                          <div class="col-10">
+                            <h7
+                              >Full Stack Developer - Chapter 2 - Creating User
+                              Interfaces with HTML</h7
+                            >
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <h6>SLIDES</h6>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Introduction to HTML and the DOM
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Formatting Web content with Headings and
+                              Paragraphs <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Formatting content with Lists and Tables
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Creating Web Forms
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Navigating with Anchors
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Embedding content with Iframes
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Drawing with Scalable Vector Graphics
+                              <i class="fas fa-external-link-alt"></i
+                            ></text>
+                          </div>
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-check-circle wd-green"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="list-group-item pt-3 pb-3">
+                        <div class="row">
+                          <div class="col-1 d-flex align-items-center">
+                            <i class="fas fa-grip-vertical"></i>
+                            <i class="fas fa-link wd-green"></i>
+                          </div>
+                          <div class="col-10">
+                            <text class="wd-red-color"
+                              >Html - all the slides above
                               <i class="fas fa-external-link-alt"></i
                             ></text>
                           </div>
