--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -76,6 +76,7 @@
                 Help
               </a>
             </li>
+            <li class="list-group-item" style="height: 140px"></li>
           </ul>
         </div>
       </div>
