--- a/public/kanbas/courses/courses.html
+++ b/public/kanbas/courses/courses.html
@@ -75,6 +75,7 @@
                 Help
               </a>
             </li>
+            <li class="list-group-item" style="height: 110px"></li>
           </ul>
         </div>
       </div>
@@ -139,21 +140,51 @@
                     </li>
                     <li class="list-group-item">
                       <a href="#">Discussions</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Announcements</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Pages</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Files</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Rubrics</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Outcomes</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
+                    </li>
+                    <li class="list-group-item">
+                      <a href="#">Collaborations</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
+                    </li>
+                    <li class="list-group-item">
+                      <a href="#">Syllabus</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                   </ul>
                 </div>
