--- a/public/kanbas/dashboard/dashboard.html
+++ b/public/kanbas/dashboard/dashboard.html
@@ -75,6 +75,7 @@
                 Help
               </a>
             </li>
+            <li class="list-group-item" style="height: 170px"></li>
           </ul>
         </div>
       </div>
