--- a/public/kanbas/grades/index.html
+++ b/public/kanbas/grades/index.html
@@ -77,6 +77,7 @@
                 Help
               </a>
             </li>
+            <li class="list-group-item" style="height: 150px"></li>
           </ul>
         </div>
       </div>
@@ -130,7 +131,7 @@
                       <a href="../assignments/index.html">Assignments</a>
                     </li>
                     <li class="list-group-item active">
-                      <a href="index.html">Grades</a>
+                      <a href="../grades/index.html">Grades</a>
                     </li>
                     <li class="list-group-item">
                       <a href="#">People</a>
@@ -143,21 +144,51 @@
                     </li>
                     <li class="list-group-item">
                       <a href="#">Discussions</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Announcements</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Pages</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Files</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Rubrics</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                     <li class="list-group-item">
                       <a href="#">Outcomes</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
+                    </li>
+                    <li class="list-group-item">
+                      <a href="#">Collaborations</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
+                    </li>
+                    <li class="list-group-item">
+                      <a href="#">Syllabus</a>
+                      <div class="float-end">
+                        <i class="far fa-eye-slash"></i>
+                      </div>
                     </li>
                   </ul>
                 </div>
