--- a/public/kanbas/navbar/courseNav.html
+++ b/public/kanbas/navbar/courseNav.html
@@ -16,7 +16,7 @@
   <body>
     <div class="row">
       <nav class="navbar navbar-light bg-dark text-white">
-        <a href="../navbar/kanbasNav.html">
+        <a href="kanbasNav.html">
           <button
             class="navbar-toggler mb-3"
             type="button"
