--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <h1>CS4500</h1>
+
+    <!-- <h1>CS4500</h1>
     <h2>Assignments</h2>
     <ul>
       <li>
-        <a href="Kanbas/KanbasNavigation/kanbasNavigation.html">A1</a>
+        <a href="Kanbas/KanbasNavigation/kanbasNavigation.html">Kanbas</a>
       </li>
     </ul>
     <h2>Labs</h2>
@@ -44,6 +45,6 @@
       <li>
         <a href="labs/a2/index.html">L2</a>
       </li>
-    </ul>
+    </ul> -->
   </body>
 </html>
